adding sort option to choose desc/asc instead of desc default

--- a/Results/bookRankings.html
+++ b/Results/bookRankings.html
@@ -7,7 +7,7 @@
 </div>
 <div style="padding-bottom: 20px;">
 	<button style="padding:15px; padding-bottom: 3px; padding-top: 3px; background-color: #42a7f5; border: none; margin-left: 50px; border-radius: 2px; font-size: 13px;" onclick="switchFilterState()">Filter</button>
-	<form style="margin-top: 25px; margin-left: 50px; margin-right: 50px; background-color: #5d4ea9; padding: 25px; width: 60%;" id="filterForm">
+	<form style="margin-top: 25px; margin-left: 50px; margin-right: 50px; background-color: #baccea; padding: 25px; width: 60%;" id="filterForm">
 		
 		<div id="genresCheck">
 			<b>genres:</b>  <br>
