--- a/Results/bookRankings.html
+++ b/Results/bookRankings.html
@@ -1,9 +1,16 @@
-<script src="bookScript.js"></script>
-<link rel="stylesheet" href="styles.css">
+<html>
+<head>
+<script src="/static/bookScript.js" defer></script>
+<link rel="stylesheet" href="/static/styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <body onload="loadBooks()" id="main" style="background-color: #362976;">
 <div style="padding-bottom: 100px; background-color: #362976;">
-	<a href="bookRankings.html" style=" text-decoration: none; padding-top:5px; padding-bottom:5px; padding-left:15px; padding-right:15px; color: #A392F3;">RoyalRoad</a>
-	<a href="nuRankings.html" style=" text-decoration: none; padding-top:5px; padding-bottom:5px; padding-left:15px; padding-right:15px; color: #A392F3;">NU</a>
+	<a href="/" style=" text-decoration: none; padding-top:5px; padding-bottom:5px; padding-left:15px; padding-right:15px; color: #A392F3;">RoyalRoad</a>
+	<a href="/" style=" text-decoration: none; padding-top:5px; padding-bottom:5px; padding-left:15px; padding-right:15px; color: #A392F3;">NU</a>
 </div>
 <div style="padding-bottom: 20px;">
 	<button style="padding:15px; padding-bottom: 3px; padding-top: 3px; background-color: #42a7f5; border: none; margin-left: 50px; border-radius: 2px; font-size: 13px;" onclick="switchFilterState()">Filter</button>
@@ -18,3 +25,4 @@
 	</form>
 </div>
 </body>
+</html>
